Splitting demo application from ZScript language support library